--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <!-- CSS only -->
+    <link rel="stylesheet" href="css/reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Encriptador by Matt5p</title>
@@ -41,11 +42,10 @@
         </div>    
     </main>
 
-    <div class="footer">
-        <footer>
-            <p>Albornoz Matías - 2022</p>
-        </footer>
-    </div>
+    <footer>
+        <p>Albornoz Matías - 2022</p>
+    </footer>
+    
     
     <script src="./js/copiar.js"></script>
     <script src="./js/encriptar.js"></script>
